manifest/objects/Apttus__DocumentImportLog__c.object
<CustomObject>
    <description>Document Import Log</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement of the Imported Document</description>
        <inlineHelpText>Agreement of the Imported Document</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Document Import Logs</relationshipLabel>
        <relationshipName>DocumentImportLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentId__c</fullName>
        <description>Document Id of the Imported Document</description>
        <inlineHelpText>Document Id of the Imported Document</inlineHelpText>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentName__c</fullName>
        <description>Document Name of the Imported Document</description>
        <inlineHelpText>Document Name of the Imported Document</inlineHelpText>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ErrorLog__c</fullName>
        <description>Error Info while saving the field/clause to Agreement</description>
        <inlineHelpText>Error Info while saving the field/clause to Agreement</inlineHelpText>
        <label>Error Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExtractedData__c</fullName>
        <description>Extracted Result from AI Provider for the Imported Document</description>
        <inlineHelpText>Extracted Result from AI Provider for the Imported Document</inlineHelpText>
        <label>Extracted Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__MappedFieldClauseName__c</fullName>
        <description>Mapped Field/Clause for the Provision</description>
        <inlineHelpText>Mapped Field/Clause for the Provision</inlineHelpText>
        <label>Mapped Field/Clause Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ProvisionName__c</fullName>
        <description>Mapped Provision for the Field/Clause</description>
        <inlineHelpText>Mapped Provision for the Field/Clause</inlineHelpText>
        <label>Provision Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ProvisionType__c</fullName>
        <description>Mapped Provision Type</description>
        <inlineHelpText>Mapped Provision Type</inlineHelpText>
        <label>Provision Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Clause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Resolution__c</fullName>
        <description>Resolution accepted for the Error</description>
        <inlineHelpText>Resolution accepted for the Error</inlineHelpText>
        <label>Resolution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Document Import Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Document Import Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocumentImportLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>